--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -9,8 +9,13 @@
   </head>
 
   <body>
+    <a href="/">Home</a>
+<a href="/auth/signup">Sign Up</a>
+<a href="/auth/login">Log In</a>
+
 
     {{{body}}}
+
 
     <script src="/js/script.js"></script>
   </body>
