added post views with modifications to update and details

--- a/views/posts/post-create.hbs
+++ b/views/posts/post-create.hbs
@@ -11,7 +11,7 @@
 
     </label>>
 
-<label> Subreddit:
+<label>  Choose Community:
          <select name="subreddit">
             {{#each subredditsFromDb}}
             <option value="{{this._id}}">{{this.name}}</option>
