--- a/views/posts/post-list.hbs
+++ b/views/posts/post-list.hbs
@@ -15,7 +15,7 @@
 
 
 <a href="#">{{this.comments.length}} Comments.</a>
- {{this.votes.length}} <br>
+ {{this.votes.length}} Votes <br>
 
 
     <a href="/posts/{{this._id}}">More details</a>
