--- a/views/users/user-edit.hbs
+++ b/views/users/user-edit.hbs
@@ -1,14 +1,13 @@
 <div>
     <h2>Edit {{userInSession.username}}'s profile</h2>
 
-    <form action="/auth/edit" method="post">
+    <form action="/auth/profile/{{userInSession._id}}/edit" method="post">
     <label>First Name:
-        <input type="text" name="firstName" placeholder="{{userInSession.firstName}}">
+        <input type="text" name="firstName" maxlength="20" value="{{userInSession.firstName}}">
     </label>
     <label>Last Name:
-        <input type="text" name="lastName" placeholder="{{userInSession.lastName}}">
+        <input type="text" name="lastName" maxlength="20" value="{{userInSession.lastName}}">
     </label>
-
     <button>Update</button>
     </form>
 </div>
