--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,3 +1,7 @@
 <h1>{{appTitle}} 🚀</h1>
 
 <p>Welcome To Mingle !</p>
+
+<a href="subreddit/create">Create Subreddit</a>
+
+<a href="subreddit">List Subreddit</a>
