--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -5,19 +5,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>{{appTitle}}</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="/stylesheets/style.css" />
   </head>
 
   <body>
-        <nav>
-    <ul>
-      <li>
-        <a href="/">Home</a><span> | </span>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="/">
+          <img src="/images/logo.png"alt="Logo"width="100"height="50" class="d-inline-block align-text-top"/> </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse"data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+         <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="/">Home</a>
+            </li>
+    
          {{#if userDetails}}
-         <a href="/auth/profile/{{userDetails._id}}">Profile</a> <span> | </span>
+
+          <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="/auth/profile/{{userDetails._id}}">Profile</a>
+            </li>
+
+          <li class="nav-item">
          <form id="logout-form" action="/auth/logout" method="GET">
           <button>Logout</button>
+          </li>
+          <li class="nav-item">
           <img src="{{userDetails.profilePicture}}" alt="Profile picture" style="width: 50px;">
+          </li>
         </form>
         {{else}}
         <a href="/auth/signup">Signup</a> <span> | </span>
@@ -34,7 +61,11 @@
 
     {{{body}}}
 
-
+<script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+      crossorigin="anonymous"
+    ></script>
     <script src="/js/script.js"></script>
   </body>
 
