routes for specific posts

--- a/views/posts/post-details.hbs
+++ b/views/posts/post-details.hbs
@@ -3,7 +3,7 @@
 
 
       <p>
-        <span>{{subreddit}}</span>
+        <span>{{postDetails}}</span>
         <span>Posted by: {{author}} </span>
        
     </p>
