--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,7 +1,14 @@
-<h1>{{appTitle}} 🚀</h1>
 
-<p>Welcome To Mingle !</p>
 
-<a href="subreddit/create">Create Subreddit</a>
+<br>
 
-<a href="subreddit">List Subreddit</a>
+<header>
+ <!-- Jumbotron -->
+  <div class="p-5 text-center bg-light">
+    <h1 class="mb-3">Mingle</h1>
+    <h4 class="mb-3">Welcome to your one stop for all Information</h4>
+    <a class="btn btn-primary" href="subreddit/create" role="button">Create Subreddit</a>
+    <a class="btn btn-primary" href="subreddit" role="button">List of Subreddits</a>
+  </div>
+  <!-- Jumbotron -->
+</header>
