--- a/views/subreddit/list.hbs
+++ b/views/subreddit/list.hbs
@@ -1,9 +1,26 @@
-<h2>Subreddit list</h2>
 
-<a href="/subreddit/create">Create subreddit</a>
+<div id ="header-index">
+  <h1 class="mb-3 text-center">List Of Subreddits</h1>
+ 
+</div>
 
+ 
+ <br>
+<section class ="subreddit-summary">
+<div class ="container-fluid">
+ <div class="row">
 {{#each subreddits}}
-  <div class="subreddit">
-    <a href="subreddit/{{_id}}">{{name}}</a>
-  </div>
-{{/each}}
+ <div class="col-4">
+     <div class="card" style="width: 18rem; margin:1rem;">
+                <div class="card-body">
+                   <h5 class="card-title"> <a href="subreddit/{{_id}}">{{name}}</a></h5>
+                    </div>
+        </div>
+    </div>
+    {{/each}}
+    </div>
+ </div>
+</section>
+<div class="text-center">
+  <a  class="btn btn-primary" href="/subreddit/create">Create subreddit</a>
+</div>
