--- a/views/subreddit/subreddit-details.hbs
+++ b/views/subreddit/subreddit-details.hbs
@@ -31,5 +31,5 @@
      </div>
 </div>
 <div class = "text-center" >
-<a class="btn btn-primary" href="/{{subredditdetails._id}}/post/create">Create Post</a>
+<a class="btn btn-primary" href="/subreddit/{{subredditdetails._id}}/post/create">Create Post</a>
 </div>
