--- a/views/posts/post-details.hbs
+++ b/views/posts/post-details.hbs
@@ -1,84 +1,93 @@
 <section class="post-details">
 
 
-<h1 class="mb-3 text-center">{{postDetails.title}}</h1>
+   <h1 class="mb-3 text-center">{{postDetails.title}}</h1>
 
-<div class ="container-fluid">
-     <div class="row">
-        <div class="col">
-             <div class="card text-center" style="width:30rem;">
-                <div class="card-body">
-                     <h5 class="card-title">Posted by: {{postDetails.author.username}}</h5> <br>
-                    <p  class="card-text">
-                          {{postDetails.text}} <br> <br>
-                          <img src="{{postDetails.img}}" alt="image">
-                            <br> <br>
+   <div class="container-fluid">
+      <div class="row">
+         <div class="col">
+            <div class="card text-center" style="width:30rem;">
+               <div class="card-body">
+                  <h5 class="card-title">Posted by: {{postDetails.author.username}}</h5> <br>
+                  <p class="card-text">
+                     {{postDetails.text}} <br> <br>
+                     <img src="{{postDetails.img}}" alt="image">
+                     <br> <br>
 
-                            <div>
-                                <button type="submit"> Upvote</button>
-                                <button type="submit"> Downvote</button>
-  
-                            </div>
-                            <div>
-                                 <br>
-                                <a href="#comment_thread">{{postDetails.comments.length}} Comments.</a> <br>
-                                {{postDetails.votes.length}} Votes<br>
-                                 
-                            </div>
-                    </p>
-                </div>
-             </div>
-        </div>
-     </div>
-</div>
-                            
+                  <div>
+                     <button type="submit"> Upvote</button>
+                     <button type="submit"> Downvote</button>
 
-      
-   
+                  </div>
+                  <div>
+                     <div class="text-center">
+                        <form action="/subreddit/{{postDetails.subreddit}}/post/{{postDetails._id}}/delete" method="post">
+                           <button class="btn btn-danger">Delete Post</button>
+                        </form>
 
-   
-  
-    
+                        <form action="/subreddit/{{postDetails.subreddit}}/post/{{postDetails._id}}/edit" method="get">
+                        <button class="bt">Edit Post</button>
+                        </form>
+                     </div>
+                  </div>
+                  <div>
+                     <br>
+                     <a href="#comment_thread">{{postDetails.comments.length}} Comments.</a> <br>
+                     {{postDetails.votes.length}} Votes<br>
 
-<!-- jump link to comment thread  -->
-
-<br>
-<h5>Comment as {{postDetails.author.username}}:</h5>
-
-<form action="/subreddit/{{postDetails.subreddit}}/post/{{postDetails._id}}" method ="post">
- <div class="form-group">
-   <label>
-   Leave a Comment:
-    <textarea  class="form-control" name ="text" cols ="30" rows ="4" /> </textarea>
-     </label>
- </div>
- <br>
-<button type="submit" class="btn btn-primary">Post Comment</button>
-
-</form>
-
-<hr>
- <!-- Comments thread will appear here for the specific post -->
- <h2 id ="comment_thread" class="text-primary">Comments for this thread:</h2>
+                  </div>
+                  </p>
+               </div>
+            </div>
+         </div>
+      </div>
+   </div>
 
 
 
-<ul class="list-group">
-{{#each comments}}
-  
-   <li class="list-group-item">
-    <h4>{{text}}</h4>
-    <p>By: {{author.username}}</p>
-    <a href="subreddit/{{_id}}">{{name}}</a>
-    <p>
-    <button><a href="/posts/{{this._id}}/edit">Edit</a></button>
 
-   <button><a href="/posts/{{this._id}}/edit">Delete</a></button>
 
-</p>
-   </li> 
-    
- 
-  
-{{/each}}
 
+
+
+
+   <!-- jump link to comment thread  -->
+
+   <br>
+   <h5>Comment as {{postDetails.author.username}}:</h5>
+
+   <form action="/subreddit/{{postDetails.subreddit}}/post/{{postDetails._id}}" method="post">
+      <div class="form-group">
+         <label>
+            Leave a Comment:
+            <textarea class="form-control" name="text" cols="30" rows="4" /> </textarea>
+         </label>
+      </div>
+      <br>
+      <button type="submit" class="btn btn-primary">Post Comment</button>
+
+   </form>
+
+   <hr>
+   <!-- Comments thread will appear here for the specific post -->
+   <h2 id="comment_thread" class="text-primary">Comments for this thread:</h2>
+
+
+
+   <ul class="list-group">
+      {{#each comments}}
+
+      <li class="list-group-item">
+         <h4>{{text}}</h4>
+         <p>subreddit : {{postDetails.subreddit}} </p>
+         <p>By: {{author.username}}</p>
+         <a href="subreddit/{{_id}}">{{name}}</a>
+         <p>
+            <button><a href="/subreddit/comment/{{_id}}/edit">Edit</a></button>
+
+            <button><a href="/posts/{{this._id}}/delete">Delete</a></button>
+
+         </p>
+      </li>
+
+      {{/each}}
