added route for displaying comments in profile

--- a/views/posts/post-details.hbs
+++ b/views/posts/post-details.hbs
@@ -32,7 +32,7 @@
                   </div>
                   <div>
                      <br>
-                     <a href="#comment_thread">{{postDetails.comments.length}} Comments.</a> <br>
+                     <a href="#comment_thread">{{comments.length}} Comments.</a> <br>
                      {{postDetails.votes.length}} Votes<br>
 
                   </div>
