implemented CRUD on posts and comments

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -7,7 +7,7 @@
   <div class="p-5 text-center bg-light">
     <h1 class="mb-3">Mingle</h1>
     <h4 class="mb-3">Welcome to your one stop for all Information</h4>
-    <a class="btn btn-primary" href="subreddit/create" role="button">Create Subreddit</a>
+    <a class="btn btn-primary" href="/subreddit/create" role="button">Create Subreddit</a>
     <a class="btn btn-primary" href="subreddit" role="button">List of Subreddits</a>
      <a class="btn btn-primary" href="post/create" role="button">Create a Post</a>
   </div>
