--- a/views/posts/post-edit.hbs
+++ b/views/posts/post-edit.hbs
@@ -9,8 +9,8 @@
 
   <label>
     Text:
-    <textarea name="text" cols="30" rows="4">
-      {{postDetails.text}}
+    <textarea name="text" cols="30" rows="4" value="{{postDetails.text}}">
+      
     </textarea>
   </label>
   <label>
