--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -1,3 +1,6 @@
+<a class="button google" href="/auth/login/profile/google">Log in with Google</a>
+
+
 <div id="login-form">
   <h2>Log In</h2>
   <form action="/auth/login" method="POST">
@@ -15,7 +18,6 @@
     </label>
 
     <button type="submit">Log In</button>
-
 
     {{#if errorMessage}}
       <p class="error">{{errorMessage}}</p>
