--- a/views/subreddit/create.hbs
+++ b/views/subreddit/create.hbs
@@ -10,3 +10,7 @@
     <label for="description">Description</label>
     <textarea class="form-control" id="description" name="description" rows="3"></textarea>
   <button type="submit" class="btn btn-primary">Submit</button>
+
+{{#if errorMessage}}
+    <p class="error">{{errorMessage}}</p>
+{{/if}}
