--- a/views/posts/post-details.hbs
+++ b/views/posts/post-details.hbs
@@ -1,7 +1,7 @@
 <section class="post-details">
 
-
-   <h1 class="mb-3 text-center">{{postDetails.title}}</h1>
+<a href="/subreddit/{{postDetails.subreddit}}"> <h1 class="mb-3 text-center">{{postDetails.title}}</h1></a>
+  
 
    <div class="container-fluid">
       <div class="row">
