--- a/views/subreddit/subreddit-details.hbs
+++ b/views/subreddit/subreddit-details.hbs
@@ -1,3 +1,5 @@
+<a href="/subreddit" class="btn btn-primary">Back to Subreddits</a>
+
 <h1 class="mb-3 text-center"> {{subredditdetails.name}}</h1>
 <h2>Moderator: {{subredditdetails.moderator.username}}</h2>
 <h5>About this subreddit:</h5>
