--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -37,7 +37,9 @@
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="/auth/profile/{{userDetails._id}}">Profile</a>
                 </li>
-
+<li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="/inbox">Inbox</a>
+            </li>
 
              <div id ="nav-form">
                    <form class="d-flex" id="logout-form" action="/auth/logout" method="GET">
