changed location of link for edit subreddut

--- a/views/subreddit/subreddit-details.hbs
+++ b/views/subreddit/subreddit-details.hbs
@@ -7,6 +7,7 @@
 
   {{subredditdetails.description}}
 </p>
+<a href="/subreddit/{{_id}}/edit" class="btn btn-primary">Edit</a>
 <hr />
 {{! list all posts }}
 
