fixed  href to edit subreddit

--- a/views/subreddit/subreddit-details.hbs
+++ b/views/subreddit/subreddit-details.hbs
@@ -7,7 +7,8 @@
 
   {{subredditdetails.description}}
 </p>
-<a href="/subreddit/{{_id}}/edit" class="btn btn-primary">Edit</a>
+<p>{{subredditdetails._id}}</p>
+<a href="/subreddit/{{subredditdetails._id}}/edit" class="btn btn-primary">Edit</a>
 <hr />
 {{! list all posts }}
 
