--- a/views/posts/post-details.hbs
+++ b/views/posts/post-details.hbs
@@ -11,7 +11,7 @@
                   <h5 class="card-title">Posted by: <a href="/auth/profile/{{postDetails.author._id}}">{{postDetails.author.username}}</a></h5> <br>
                   <p class="card-text">
                      {{postDetails.text}} <br> <br>
-                     <img src="{{postDetails.img}}" alt="image">
+                     <img src="{{postDetails.img}}" alt="image" style="width: 300px;">
                      <br> <br>
 
                   <div>
