--- a/views/posts/post-create.hbs
+++ b/views/posts/post-create.hbs
@@ -1,34 +1,33 @@
 <h3>Create a new post</h3>
 <h5>For the Subreddit : {{name}}</h5>
 
-<form action="/subreddit/{{_id}}/post/create" method ="post">
-<div class="form-group">
-<label>
-    Title:
+<form action="/subreddit/{{_id}}/post/create" method="post" enctype="multipart/form-data">
+    <div class="form-group">
+        <label>
+            Title:
+            <br><br>
+            <input type="text" class="form-control" name="title" />
+        </label>
+    </div>
+    <br> <br>
+    <div class="form-group">
+        <label> Text: <br><br>
+            <textarea class="form-control" name="text" cols="30" rows="4" /> </textarea>
+
+        </label>>
+        <br><br>
+    </div>
+
+
+    <div class="form-group">
+        <label>Picture:
+            <input type="file" name="img" />
+        </label>
+    </div>
     <br><br>
-    <input type="text" class="form-control" name ="title" />
-</label>
-</div>
-<br> <br>
-<div class="form-group">
-<label> Text: <br><br>
-        <textarea  class="form-control" name ="text" cols ="30" rows ="4" /> </textarea>
-
-    </label>>
-    <br><br>
-</div>
-
-
-<div class="form-group">
-<label>
-   Enter Image URL:<br><br>
-    <input class="form-control" type="text" name ="img" />
-</label>
-</div>
-<br><br>
-<button class="btn btn-primary" type="submit"> Create Post</button>
+    <button class="btn btn-primary" type="submit"> Create Post</button>
 </form>
 
 {{#if errorMessage}}
-    <p class="error">{{errorMessage}}</p>
+<p class="error">{{errorMessage}}</p>
 {{/if}}
