--- a/views/subreddit/create.hbs
+++ b/views/subreddit/create.hbs
@@ -1,6 +1,6 @@
 <h2>Create subreddit</h2>
 
-<form action="/subreddit/create" method="POST">
+<form action="/subreddit/create" method="POST" enctype="multipart/form-data">
   <div class="form-group">
     <label for="name">Name</label>
     <input type="text" class="form-control" id="name" name="name" placeholder="Enter name">
@@ -9,7 +9,12 @@
   <div class="form-group">
     <label for="description">Description</label>
     <textarea class="form-control" id="description" name="description" rows="3"></textarea>
-  <button type="submit" class="btn btn-primary">Submit</button>
+    <button type="submit" class="btn btn-primary">Submit</button>
+
+    <label>Picture:
+      <input type="file" name="img" />
+    </label>
+</form>
 
 {{#if errorMessage}}
     <p class="error">{{errorMessage}}</p>
