--- a/views/subreddit/subreddit-details.hbs
+++ b/views/subreddit/subreddit-details.hbs
@@ -1,6 +1,7 @@
 <a href="/subreddit" class="btn btn-primary">Back to Subreddits</a>
 
 <h1 class="mb-3 text-center"> {{subredditdetails.name}}</h1>
+<img src="{{subredditdetails.img}}" alt="image" style="width: 100px; border-radius:100%;" >
 <h2>Moderator: {{subredditdetails.moderator.username}}</h2>
 <h5>About this subreddit:</h5>
 <p>
